--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -344,7 +344,7 @@
   border-radius: 8px;
   padding: 15px;
   display: grid;
-  grid-template-rows: 280px 140px;
+  grid-template-rows: 280px auto;
   align-items: center;
   justify-content: space-between;
   align-self: stretch;
