--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -415,8 +415,8 @@
   text-align: center;
   width: 100%;
   height: auto;
+  display: inline-block;
 }
-
 .shop-page .cards .card .price{
   font-size: 1.1em;
 }
@@ -429,6 +429,11 @@
   overflow: hidden;
   text-align: center;
   height: auto;
+  display: inline-block;
+}
+.shop-page .cards .card .title::first-letter,
+.shop-page .cards .card .description::first-letter {
+  text-transform: uppercase;
 }
 .shop-page .cards .card .buying-buttons {
   /* margin-top: 14px; */
